fix button padding on use case pages
Buttons at the bottom of each use-case page look squished. This new padding is consistent with the "subscribe to newsletter" button in the footer. 

The maintainer may want to create a class that applies to all buttons instead.

https://www.vaultproject.io/use-cases/secrets-management/
https://www.vaultproject.io/use-cases/identity-based-access/
https://www.vaultproject.io/use-cases/data-encryption/

--- a/website/components/use-case-cta-section/style.css
+++ b/website/components/use-case-cta-section/style.css
@@ -12,6 +12,10 @@
   text-align: center;
   color: var(--white);
 
+  & .g-btn {
+    padding: 14px 20px;
+  }
+  
   & .g-btn.white {
     background: var(--white);
     border: 2px solid var(--white);
